syntax = "proto3";
package pb;
option go_package = "github.com/v-starostin/goph-keeper/pkg/pb";

service Auth {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc Refresh(RefreshRequest) returns (RefreshResponse);
}

message AuthenticateRequest {
  string username = 1;
  string password = 2;
}

message AuthenticateResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshRequest {
  string access_token = 1;
  string refresh_token = 2;
}

message RefreshResponse {
  string access_token = 1;
  string refresh_token = 2;
}
